# irods-ldap-sync

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .ssl.env  .test.env  README.md  pytest.ini  requirements.txt
.github/workflows/: ci.yml  doc.yml
ansible/: .env.sample  playbook.yml
ansible/inventory/: workspace
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/sync/defaults/: main.yml
ansible/roles/sync/tasks/: main.yml
ansible/roles/sync/templates/: env.j2
ansible/vars/: default.yml
binder/: README  environment.yml  sync_policies.md
doc/: Synchronisation Policy.ipynb  environment.yml  policy.ipynb  sync_policies.md
etc/: .env  docker-compose.yml  irods_start.sh  irods_stop.sh  ldap_show.sh  ldap_start.sh  pam_irods.py
etc/database/: init.sh
etc/irods/: CMakeLists.txt  Dockerfile  Dockerfile.centos  Dockerfile.ubuntu  config.json  entrypoint.sh  genresp.sh  irods_environment.json  surf-irods.repo
etc/irods_environment/: irods.crt  irods_environment.json
etc/ldif/: 01-access.ldif  99-service.ldif  service.ldif
src/: sync.py
tests/: base_test.py  test_all.py
